--- a/condition.html
+++ b/condition.html
@@ -38,7 +38,7 @@
             <nav class="navbar">
                 <ul>
                     <li class="nav-item">
-                        <a href="/" class="nav-link">Home</a>
+                        <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="condition.html" class="nav-link">privacy</a>
